# blaze-emulator

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  blaze.exe.manifest  blaze.rc
.github/workflows/: ci.yml  semgrep.yml  sonarcloud.yml
cmake/: linux-mingw.cmake
doc/: notes.md
include/blaze/: APU.hpp  Bus.hpp  CPU.hpp  DMA.hpp  MMIO.hpp  MemRam.hpp  MemTypes.hpp  MulDiv.hpp  PPU.hpp  ROM.hpp  SRAM.hpp  color.hpp  debug.hpp  util.hpp
samples/: CMakeLists.txt
samples/hello-interrupt/: hello-interrupt.asm
samples/hello-world/: hello-world.asm
src/core/: Bus.cpp  CPU.cpp  CPU.h  DMA.cpp  MMIO.cpp  MemRam.cpp  MemTypes.h  MulDiv.cpp  ROM.cpp  Register.cpp  SRAM.cpp
src/gui/: APU.cpp  PPU.cpp  blaze.cpp
test/: bus-mock.hpp  color.cpp  cpu.cpp  support.cpp
